Added openapi description for patch and delete handlers. Implemented them on the echo framework
